<resources>
    <string name="app_name">YBO Seller</string>
    <string name="filter">Filter</string>
    <string name="password">Password</string>
    <string name="email">Mobile number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_through_otp">Login through OTP</string>

    <string name="login">Login</string>
    <string name="welcome_msg">Welcome back!</string>
    <string name="welcome_msg_kindly">Kindly enter</string>
    <string name="welcome_msg_two">your login details.</string>
    <string name="unauthorised">Invalid credentials</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="already_member">Already registered!</string>
    <string name="title_activity_landing">Landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search offers</string>
    <string name="otp_verification">Verify through OTP</string>
    <string name="otp">Verify OTP</string>
    <string name="otp_hint">6 digits OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="help">Help</string>
    <string name="email_lbl">Contact us</string>
    <string name="edit">Edit</string>
    <string name="number">9540621919</string>
    <string name="emaiid">Email</string>
    <string name="change_password">Change password</string>
    <string name="search_shop">Search shop</string>
    <string name="news">News</string>
    <string name="create_account">Create account</string>
    <string name="doj">D.O.J</string>
    <string name="product">Products</string>
    <string name="search_product">Search product</string>
    <string name="no_data">No data</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_qty">Product quantity</string>
    <string name="upload_image">Upload image</string>
    <string name="seller_name">Seller name</string>
    <string name="dob">Date of birth</string>
    <string name="adhar_number">Adhar number</string>
    <string name="phone_number">Phone number</string>
    <string name="email_id">Email</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital status</string>
    <string name="account_number">Account number</string>
    <string name="bank_name">Bank name</string>
    <string name="name_on_account">Name on account</string>
    <string name="pan_number">Pan number</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="bank_detail">Bank detail</string>
    <string name="manage_address">Manage address</string>
    <string name="shop_name">Shop name</string>
    <string name="shop_address">Shop address</string>
    <string name="landmark">Landmark</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="upload">Upload</string>
    <string name="change_image">Change</string>
    <string name="pincode">Pincode</string>
    <string name="add_image">Add Images</string>

    <string-array name="filter_items">
        <item>Category</item>
        <item>Offers</item>
    </string-array>
</resources>
