<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:checkable="true"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_bank"
        android:icon="@drawable/ic_local_atm_black_24dp"
        android:checkable="true"
        android:title="@string/bank_detail" />
    <item
        android:id="@+id/nav_address"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:checkable="true"
        android:title="@string/manage_address" />
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:checkable="true"
        android:title="@string/product" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_receipt_black_24dp"
        android:checkable="true"
        android:title="@string/news" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:checkable="true"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_email_black_24dp"
        android:checkable="true"
        android:title="@string/email_lbl" />


    <!--<item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">



                <item
                    android:id="@+id/action_activation"
                    android:icon="@drawable/activation"
                    android:title="@string/activation" />

                &lt;!&ndash;<item
                    android:id="@+id/action_report"
                    android:icon="@drawable/report"
                    android:title="@string/report" />&ndash;&gt;


                <item
                    android:id="@+id/action_epin"
                    android:icon="@drawable/ic_fiber_pin_black_24dp"
                    android:title="@string/epin" />

                <item
                    android:id="@+id/action_level_report"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/level_report" />

                <item
                    android:id="@+id/action_payout_report"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/payout_report" />

                &lt;!&ndash;<item
                    android:id="@+id/action_epin_list"
                    android:icon="@drawable/f_list"
                    android:title="@string/epin_list" />&ndash;&gt;

            </group>
        </menu>
    </item>-->


</menu>
