<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignUp">
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/twenty"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twenty"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:text="@string/create_account"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top">
        <TextView
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap_italic"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/fifty"
            android:layout_marginLeft="@dimen/twenty"
            android:text="@string/unauthorised"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eighty"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/thirty"
                android:layout_margin="@dimen/ten"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eighteen"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_black_24dp"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/ten"
                        android:layout_marginRight="@dimen/ten"
                        android:background="@color/black_overlay"/>
                    <EditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColorHint="@color/black_overlay"
                        android:textColor="@color/black_overlay"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:background="@null"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.cardview.widget.CardView

                    android:id="@+id/buttonContinue"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/thirty"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_marginBottom="@dimen/twenty"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/blue_light">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:textSize="@dimen/text_italic"/>
                </androidx.cardview.widget.CardView>


            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/top"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:rotation="180"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/twenty"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textColor="@color/black_overlay"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:layout_marginLeft="@dimen/radius"
            android:textAllCaps="true"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textColor="@color/grad_dusk_start"/>
    </LinearLayout>

</RelativeLayout>